--- a/web-dev/style.css
+++ b/web-dev/style.css
@@ -4,3 +4,25 @@ body {
     background: #FAFAFA;
     font-family: Helvetica;
 }
+
+button {
+    border: none;
+    cursor: pointer;
+    appearance: none;
+    background-color: #FAFAFA;
+}
+
+.container {
+    justify-content: space-between;
+    display: flex;
+}
+
+.disclaimer {
+    position: fixed;
+    width: 50%;
+    height: 50px;
+    margin-left: -25%;
+    background: #0000;
+    bottom: 0px;
+    left: 50%;
+}
